topbar rewrite, logout in user button, rewrite some css

--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -35,3 +35,6 @@
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
 
+.not-selectable {
+    user-select: none;
+}
