sidebar more properly display in flex-container

--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -8,6 +8,12 @@
     width: fit-content;
 }
 
+@media (max-width: 850px) {
+    .sidebar {
+      width: 150px;
+    }
+}
+
 .sidebar .active {
     border-radius: 5px;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
