create employees_information with cards layout

--- a/client/src/components/AppContent.css
+++ b/client/src/components/AppContent.css
@@ -1,38 +1,43 @@
 .app-content {
   display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+}
+
+.flex-container {
+  display: flex;
+  height: 100%;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+}
+
+.top-10-flex, .bottom-90-flex {
+  width: 100%;
 }
 
 .top-10-flex {
-    flex: 10%;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+  flex: 10%;
 }
 
 .bottom-90-flex {
-    display: flex;
-    flex: 90%;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+  flex: 90%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  overflow: hidden;
+}
+
+.bottom-left-15-flex, .bottom-right-85-flex {
+  height: 100%;
 }
 
 .bottom-left-15-flex {
   flex: 15%;
   text-align: right;
-  height: 100%;
   width: fit-content;
 }
 
 .bottom-right-85-flex {
   flex: 85%;
-  height: 100%;
   width: fit-content;
 }
